--- a/Academind/react-the-complete-guide-incl-redux/module-07/lesson-098/package.json
+++ b/Academind/react-the-complete-guide-incl-redux/module-07/lesson-098/package.json
@@ -7,6 +7,7 @@
         "@testing-library/react": "^10.0.3",
         "@testing-library/user-event": "^10.1.0",
         "lodash": "^4.17.15",
+        "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1"
