--- a/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/package.json
+++ b/Academind/react-the-complete-guide-incl-redux/module-08/burger-builder/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "react-scripts": "3.4.1"
@@ -11,7 +12,8 @@
         "@testing-library/jest-dom": "^5.5.0",
         "@testing-library/react": "^10.0.3",
         "@testing-library/user-event": "^10.1.0",
-        "node-sass": "^4.14.0"
+        "node-sass": "^4.14.0",
+        "react-context-devtool": "^1.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
