--- a/Academind/react-the-complete-guide-incl-redux/module-09/starting-setup/package.json
+++ b/Academind/react-the-complete-guide-incl-redux/module-09/starting-setup/package.json
@@ -7,7 +7,8 @@
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "ulog": "^2.0.0-beta.6"
   },
   "scripts": {
     "start": "react-scripts start",
