--- a/Academind/react-the-complete-guide-incl-redux/module-10/burger-builder/package.json
+++ b/Academind/react-the-complete-guide-incl-redux/module-10/burger-builder/package.json
@@ -3,10 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "axios": "^0.19.2",
+        "lodash": "^4.17.15",
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
-        "react-scripts": "3.4.1"
+        "react-scripts": "3.4.1",
+        "winston": "^3.2.1"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.5.0",
